--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,7 @@
 @import "../css/sass/components/our-barbers";
 @import "../css/sass/components/activities";
 @import "../css/sass/components/online-booking";
+@import "../css/sass/components/footer";
 
 html {
     font-family: 'Open Sans';
