--- a/css/sass/components/_online-booking.scss
+++ b/css/sass/components/_online-booking.scss
@@ -9,6 +9,7 @@
     &__container{
         display: flex;
 
+        
     }
     &__right-side {
         flex: 1 0 50%;
@@ -20,7 +21,11 @@
         .contact-list{
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 20px;          
+        }
+        &__item{
+            display: flex;
+            align-items: center;
         }
         .adress-line {
             font-weight: 700;
@@ -75,7 +80,7 @@
         display: flex;        
         flex-direction: column;
         gap: 44px;
-        padding: 100px 30px 100px 100px;
+        padding: 100px 30px 100px 0px;
     }    
 }
 
