--- a/css/sass/components/_online-booking.scss
+++ b/css/sass/components/_online-booking.scss
@@ -9,24 +9,24 @@
     &__container{
         display: flex;
 
-        
+
     }
     &__right-side {
         flex: 1 0 50%;
         display: flex;
         flex-direction: column;
         gap: 40px;
-        padding: 100px;
-        
+        padding: 100px;        
         .contact-list{
             display: flex;
             flex-direction: column;
             gap: 20px;          
-        }
-        &__item{
-            display: flex;
-            align-items: center;
-        }
+        }        
+        a {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        }        
         .adress-line {
             font-weight: 700;
             font-size: 18px;
@@ -50,7 +50,7 @@
             letter-spacing: 0.02em;
             text-decoration-line: underline;
             color: #9DA4BD;font-style: normal;
-        }
+        }       
         h3 {
             font-weight: 600;
             font-size: 11px;
