--- a/css/sass/components/_our-barbers.scss
+++ b/css/sass/components/_our-barbers.scss
@@ -4,7 +4,7 @@
         flex-direction: column;
         padding: 102px 0px;
         gap: 20px;
-        background: #F7F7F7
+        background: #F7F7F7;
     }
     h3 svg {
         background: #303030;
@@ -12,7 +12,9 @@
     }
     &__list{
         display: flex;
+        flex-wrap: wrap;
         gap: 30px;
+        justify-content: center;
     }
     &__item {
         display: flex;
@@ -67,3 +69,10 @@
     }
 }
 
+
+@media screen and (max-width: 1199px) {
+    h2, h3{
+        display: flex;
+        justify-content: center;
+    }
+}
