--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@
 @import "../css/sass/components/activities";
 @import "../css/sass/components/online-booking";
 @import "../css/sass/components/footer";
+@import "../css/sass/components/mobile-menu";
 
 html {
     font-family: 'Open Sans';
@@ -47,3 +48,20 @@ html {
     padding: 12px 20px;
     cursor: pointer;
  }
+ .container {
+    margin: 0 auto;
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .container{
+        width: 768px;
+        
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .container{
+        width: 1200px;
+    }
+}
