--- a/css/sass/components/_about.scss
+++ b/css/sass/components/_about.scss
@@ -56,3 +56,30 @@
         transform: rotate(90deg);
     }
 }
+@media screen and (max-width: 767px) {
+    .about-section__images {
+        display: none;
+    }
+    .about-section-details {
+        margin: 0px 30px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .about-section {
+        &__images {
+            display: flex;
+            flex-direction: column;
+        } 
+    }
+    .about-section-details {
+        justify-content: space-between;
+        &__title{
+            font-size: 28px;
+            line-height: 33px;
+        } 
+        &__text {
+            margin: auto;
+        }             
+    }    
+}
