--- a/css/sass/components/_activities.scss
+++ b/css/sass/components/_activities.scss
@@ -12,6 +12,8 @@
     &__list {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
         gap: 30px;
     } 
 }    
