--- a/css/sass/components/_header.scss
+++ b/css/sass/components/_header.scss
@@ -1,11 +1,11 @@
 .header-section-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .header-social {
     width: 155px;
-    height: 680px;
     background-color: #FFFFFF;
     display: flex;
     flex-direction: column;
@@ -49,12 +49,13 @@
     }
 }
 
-.hero {
-    height: 680px;
-    width: 1015px;
+.hero {    
+    height: 580px;
     background-color: grey;
     padding: 52px 20px 0px 100px;
-    background-image: url(../images/barber/barber-D-1x.png);
+    background-image: url(../images/barber/barber-M-1x.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     &__navigation {
         display: flex;
         justify-content: space-between;
@@ -92,7 +93,6 @@
 .main-description {
     display: flex;
     flex-direction: column;
-    padding-top: 205px;
     gap: 20px;
     &__subtitle {
         font-weight: 600;
@@ -124,5 +124,79 @@
     svg {
         background: rgba(157, 164, 189, 0.6);
         transform: rotate(90deg); 
+    }
+}
+
+@media screen and (max-width: 767px) {
+
+    .main-description {
+        padding-top: 130px;
+    }
+    .header-social {
+        display: none;
+    }
+    .hero__navigation {
+        justify-content: flex-end;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px){
+    .main-description {
+        padding-top: 205px;
+    }
+    .header-section-container {
+        height: 680px;        
+    }
+    .header-social{
+        max-width: 90px;
+    }
+    .hero {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/barber/barber-T-1x.png);
+        background-repeat: no-repeat;
+        padding: 52px 20px 0px 20px;
+        flex-grow: 1
+        ;
+        .right-navigation__list {
+            display: flex;
+            flex-direction: column-reverse;
+        }
+        .main-description {
+            padding-left: 80px;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .main-description {
+        padding-top: 205px;
+    }
+    .hero {
+        flex-grow: 1;
+        height: 680px;
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/barber/barber-D-1x.png);
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero {        
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/barber/barber-M-2x.png); 
+    }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2) ,
+    screen and (min-width: 768px) and (min-resolution: 192dpi),
+    screen and (min-width: 768px) and (min-resolution: 2dppx) {
+    .hero {        
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/barber/barber-T-2x.png); 
+    }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2) ,
+    screen and (min-width: 1200px) and (min-resolution: 192dpi),
+    screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+    .hero {        
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/barber/barber-D-2x.png); 
     }
 }
